fix: page height
after navigation, program page was too large and needed to be
reloaded. This should fix that.

close #44

--- a/src/app/(app)/program/layout.module.css
+++ b/src/app/(app)/program/layout.module.css
@@ -2,6 +2,6 @@
   display: grid;
   grid-template-columns: 100vw;
   grid-template-rows: min-content 1fr;
-  height: 100vh;
+  height: 100svh;
   justify-content: center;
 }
